crates/fsr/fsr/include/ffx_fsr2.h


typedef enum FfxFsr2InitializationFlagBits {
    FFX_FSR2_ENABLE_HIGH_DYNAMIC_RANGE                  = (1<<0),   
    FFX_FSR2_ENABLE_DISPLAY_RESOLUTION_MOTION_VECTORS   = (1<<1),   
    FFX_FSR2_ENABLE_MOTION_VECTORS_JITTER_CANCELLATION  = (1<<2),   
    FFX_FSR2_ENABLE_DEPTH_INVERTED                      = (1<<3),   
    FFX_FSR2_ENABLE_DEPTH_INFINITE                      = (1<<4),   
    FFX_FSR2_ENABLE_AUTO_EXPOSURE                       = (1<<5),   
    FFX_FSR2_ENABLE_DYNAMIC_RESOLUTION                  = (1<<6),   
    FFX_FSR2_ENABLE_TEXTURE1D_USAGE                     = (1<<7)    
} FfxFsr2InitializationFlagBits;
typedef struct FfxFsr2ContextDescription {
    uint32_t                    flags;                              
    FfxDimensions2D             maxRenderSize;                      
    FfxDimensions2D             displaySize;                        
    FfxFsr2Interface            callbacks;                          
    FfxDevice                   device;                             
} FfxFsr2ContextDescription;
typedef struct FfxFsr2Context {
    uint32_t                    data[FFX_FSR2_CONTEXT_SIZE];        
} FfxFsr2Context;
FFX_API FfxErrorCode ffxFsr2ContextCreate(FfxFsr2Context* context, const FfxFsr2ContextDescription* contextDescription);