crates/fsr/src/bindings.rs

#[doc = "< The GPU job is performing a compute dispatch."]
pub const FfxGpuJobType_FFX_GPU_JOB_COMPUTE: FfxGpuJobType = 2;
#[doc = " An enumberation for different render job types"]
pub type FfxGpuJobType = ::std::os::raw::c_uint;
#[doc = " A typedef representing the graphics device."]
pub type FfxDevice = *mut ::std::os::raw::c_void;
#[doc = " A typedef representing a command list or command buffer."]
pub type FfxCommandList = *mut ::std::os::raw::c_void;
#[doc = " A typedef for a root signature."]
pub type FfxRootSignature = *mut ::std::os::raw::c_void;
#[doc = " A typedef for a pipeline state object."]
pub type FfxPipeline = *mut ::std::os::raw::c_void;
#[doc = " A structure encapasulating a collection of device capabilities."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxDeviceCapabilities {
    #[doc = "< The minimum shader model supported by the device."]
    pub minimumSupportedShaderModel: FfxShaderModel,
    #[doc = "< The minimum supported wavefront width."]
    pub waveLaneCountMin: u32,
    #[doc = "< The maximum supported wavefront width."]
    pub waveLaneCountMax: u32,
    #[doc = "< The device supports FP16 in hardware."]
    pub fp16Supported: bool,
    #[doc = "< The device supports raytracing."]
    pub raytracingSupported: bool,
}
#[doc = " A structure encapsulating a 2-dimensional point, using 32bit unsigned integers."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxDimensions2D {
    #[doc = "< The width of a 2-dimensional range."]
    pub width: u32,
    #[doc = "< The height of a 2-dimensional range."]
    pub height: u32,
}
#[doc = " A structure encapsulating a 2-dimensional point,"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxIntCoords2D {
    #[doc = "< The x coordinate of a 2-dimensional point."]
    pub x: i32,
    #[doc = "< The y coordinate of a 2-dimensional point."]
    pub y: i32,
}
#[doc = " A structure encapsulating a 2-dimensional set of floating point coordinates."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxFloatCoords2D {
    #[doc = "< The x coordinate of a 2-dimensional point."]
    pub x: f32,
    #[doc = "< The y coordinate of a 2-dimensional point."]
    pub y: f32,
}
#[doc = " A structure describing a resource."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxResourceDescription {
    #[doc = "< The type of the resource."]
    pub type_: FfxResourceType,
    #[doc = "< The surface format."]
    pub format: FfxSurfaceFormat,
    #[doc = "< The width of the resource."]
    pub width: u32,
    #[doc = "< The height of the resource."]
    pub height: u32,
    #[doc = "< The depth of the resource."]
    pub depth: u32,
    #[doc = "< Number of mips (or 0 for full mipchain)."]
    pub mipCount: u32,
    #[doc = "< A set of <c><i>FfxResourceFlags</i></c> flags."]
    pub flags: FfxResourceFlags,
}
#[doc = " An outward facing structure containing a resource"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxResource {
    #[doc = "< pointer to the resource."]
    pub resource: *mut ::std::os::raw::c_void,
    pub name: [u32; 64usize],
    pub description: FfxResourceDescription,
    pub state: FfxResourceStates,
    pub isDepth: bool,
    pub descriptorData: u64,
}
#[doc = " An internal structure containing a handle to a resource and resource views"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxResourceInternal {
    #[doc = "< The index of the resource."]
    pub internalIndex: i32,
}
#[doc = " A structure defining a resource bind point"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxResourceBinding {
    pub slotIndex: u32,
    pub resourceIdentifier: u32,
    pub name: [u32; 64usize],
}
#[doc = " A structure encapsulating a single pass of an algorithm."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxPipelineState {
    #[doc = "< The pipelines rootSignature"]
    pub rootSignature: FfxRootSignature,
    #[doc = "< The pipeline object"]
    pub pipeline: FfxPipeline,
    #[doc = "< Count of UAVs used in this pipeline"]
    pub uavCount: u32,
    #[doc = "< Count of SRVs used in this pipeline"]
    pub srvCount: u32,
    #[doc = "< Count of constant buffers used in this pipeline"]
    pub constCount: u32,
    #[doc = "< Array of ResourceIdentifiers bound as UAVs"]
    pub uavResourceBindings: [FfxResourceBinding; 8usize],
    #[doc = "< Array of ResourceIdentifiers bound as SRVs"]
    pub srvResourceBindings: [FfxResourceBinding; 16usize],
    #[doc = "< Array of ResourceIdentifiers bound as CBs"]
    pub cbResourceBindings: [FfxResourceBinding; 2usize],
}
#[doc = " A structure containing the data required to create a resource."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxCreateResourceDescription {
    #[doc = "< The heap type to hold the resource, typically <c><i>FFX_HEAP_TYPE_DEFAULT</i></c>."]
    pub heapType: FfxHeapType,
    #[doc = "< A resource description."]
    pub resourceDescription: FfxResourceDescription,
    #[doc = "< The initial resource state."]
    pub initalState: FfxResourceStates,
    #[doc = "< Size of initial data buffer."]
    pub initDataSize: u32,
    #[doc = "< Buffer containing data to fill the resource."]
    pub initData: *mut ::std::os::raw::c_void,
    #[doc = "< Name of the resource."]
    pub name: *const u32,
    #[doc = "< Resource usage flags."]
    pub usage: FfxResourceUsage,
    #[doc = "< Internal resource ID."]
    pub id: u32,
}
#[doc = " A structure containing the description used to create a\n <c><i>FfxPipeline</i></c> structure.\n\n A pipeline is the name given to a shader and the collection of state that\n is required to dispatch it. In the context of FSR2 and its architecture\n this means that a <c><i>FfxPipelineDescription</i></c> will map to either a\n monolithic object in an explicit API (such as a\n <c><i>PipelineStateObject</i></c> in DirectX 12). Or a shader and some\n ancillary API objects (in something like DirectX 11).\n\n The <c><i>contextFlags</i></c> field contains a copy of the flags passed\n to <c><i>ffxFsr2ContextCreate</i></c> via the <c><i>flags</i></c> field of\n the <c><i>FfxFsr2InitializationParams</i></c> structure. These flags are\n used to determine which permutation of a pipeline for a specific\n <c><i>FfxFsr2Pass</i></c> should be used to implement the features required\n by each application, as well as to acheive the best performance on specific\n target hardware configurations.\n\n When using one of the provided backends for FSR2 (such as DirectX 12 or\n Vulkan) the data required to create a pipeline is compiled offline and\n included into the backend library that you are using. For cases where the\n backend interface is overriden by providing custom callback function\n implementations care should be taken to respect the contents of the\n <c><i>contextFlags</i></c> field in order to correctly support the options\n provided by FSR2, and acheive best performance.\n\n @ingroup FSR2"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxPipelineDescription {
    #[doc = "< A collection of <c><i>FfxFsr2InitializationFlagBits</i></c> which were passed to the context."]
    pub contextFlags: u32,
    #[doc = "< Array of static samplers."]
    pub samplers: *mut FfxFilterType,
    #[doc = "< The number of samples contained inside <c><i>samplers</i></c>."]
    pub samplerCount: usize,
    #[doc = "< Array containing the sizes of the root constant buffers (count of 32 bit elements)."]
    pub rootConstantBufferSizes: *const u32,
    #[doc = "< The number of root constants contained within <c><i>rootConstantBufferSizes</i></c>."]
    pub rootConstantBufferCount: u32,
}
#[doc = " A structure containing a constant buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxConstantBuffer {
    #[doc = "< Size of 32 bit chunks used in the constant buffer"]
    pub uint32Size: u32,
    #[doc = "< Constant buffer data"]
    pub data: [u32; 64usize],
}
#[doc = " A structure describing a clear render job."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxClearFloatJobDescription {
    #[doc = "< The clear color of the resource."]
    pub color: [f32; 4usize],
    #[doc = "< The resource to be cleared."]
    pub target: FfxResourceInternal,
}
#[doc = " A structure describing a compute render job."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxComputeJobDescription {
    #[doc = "< Compute pipeline for the render job."]
    pub pipeline: FfxPipelineState,
    #[doc = "< Dispatch dimensions."]
    pub dimensions: [u32; 3usize],
    #[doc = "< SRV resources to be bound in the compute job."]
    pub srvs: [FfxResourceInternal; 16usize],
    pub srvNames: [[u32; 64usize]; 16usize],
    #[doc = "< UAV resources to be bound in the compute job."]
    pub uavs: [FfxResourceInternal; 8usize],
    #[doc = "< Mip level of UAV resources to be bound in the compute job."]
    pub uavMip: [u32; 8usize],
    pub uavNames: [[u32; 64usize]; 8usize],
    #[doc = "< Constant buffers to be bound in the compute job."]
    pub cbs: [FfxConstantBuffer; 2usize],
    pub cbNames: [[u32; 64usize]; 2usize],
}
#[doc = " A structure describing a copy render job."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FfxCopyJobDescription {
    #[doc = "< Source resource for the copy."]
    pub src: FfxResourceInternal,
    #[doc = "< Destination resource for the copy."]
    pub dst: FfxResourceInternal,
}
#[doc = " A structure describing a single render job."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct FfxGpuJobDescription {
    #[doc = "< Type of the job."]
    pub jobType: FfxGpuJobType,
    pub __bindgen_anon_1: FfxGpuJobDescription__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union FfxGpuJobDescription__bindgen_ty_1 {
    #[doc = "< Clear job descriptor. Valid when <c><i>jobType</i></c> is <c><i>FFX_RENDER_JOB_CLEAR_FLOAT</i></c>."]
    pub clearJobDescriptor: FfxClearFloatJobDescription,
    #[doc = "< Copy job descriptor. Valid when <c><i>jobType</i></c> is <c><i>FFX_RENDER_JOB_COPY</i></c>."]
    pub copyJobDescriptor: FfxCopyJobDescription,
    #[doc = "< Compute job descriptor. Valid when <c><i>jobType</i></c> is <c><i>FFX_RENDER_JOB_COMPUTE</i></c>."]
    pub computeJobDescriptor: FfxComputeJobDescription,
}
#[doc = " The value of Pi."]
pub const FFX_PI: f32 = 3.1415927410125732;
#[doc = " An epsilon value for floating point numbers."]
pub const FFX_EPSILON: f32 = 0.0000009999999974752427;
#[doc = " A typedef for the callback function for assert printing.\n\n This can be used to re-route printing of assert messages from the FFX backend\n to another destination. For example instead of the default behaviour of printing\n the assert messages to the debugger's TTY the message can be re-routed to a\n MessageBox in a GUI application.\n\n @param [in] message                 The message generated by the assert.\n"]
pub type FfxAssertCallback =
    ::std::option::Option<unsafe extern "C" fn(message: *const ::std::os::raw::c_char)>;
extern "C" {
    #[doc = " Function to report an assert.\n\n @param [in] file                    The name of the file as a string.\n @param [in] line                    The index of the line in the file.\n @param [in] condition               The boolean condition that was tested.\n @param [in] msg                     The optional message to print.\n\n @returns\n Always returns true.\n"]
    pub fn ffxAssertReport(
        file: *const ::std::os::raw::c_char,
        line: i32,
        condition: *const ::std::os::raw::c_char,
        msg: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    #[doc = " Provides the ability to set a callback for assert messages.\n\n @param [in] callback                The callback function that will receive assert messages.\n"]
    pub fn ffxAssertSetPrintingCallback(callback: FfxAssertCallback);
}
